# SBXN

./: .gitignore  CMakeLists.txt  README.MD
src/: main.c  platform.h  sbx-args.c  sbx-args.h  sbxn.h
src/data-structures/: data-structures.h  gen-handle-array.c  gen-handle-array.h  vector.c  vector.h
src/platform/: platform.h  shared-lib.h
src/sbxn/: sbxn-internal.c  sbxn-internal.h  sbxn.h
test/: test_main.c
